# Backend

./: .env  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test.db
.github/ISSUE_TEMPLATE/: bug_report.md  issue-template.md
app/: main.py  models.py  schemas.py
app/api/v1/endpoints/: actors.py  auth.py  feedbacks.py  projects.py  report.py  sessions.py  video.py
app/core/: config.py  database.py  deps.py  security.py
app/models/: models.py
app/routers/: feedbacks.py  pages.py  sessions.py  users.py  videos.py
app/schemas/: schemas.py
app/services/face_analysis/: __init__.py  analyzer.py  clustering.py  detector.py  models.py  timeline.py  video_reader.py
app/static/: style.css
app/templates/: mobile.html  pc.html
scripts/: test_face_analysis.py  test_face_clustering.py  test_face_detector.py  test_face_timeline.py
